Swagger (Brands) and migration changes
